<resources>
    <string name="app_name">Balah</string>
    <string name="appid">846915048815491</string>
    <string name="clientid">b060b1179c15243db3b75d339f16e545</string>
    <string name="Map_Api_Key">AIzaSyBye02fV6HzEsMCRhGY-wimPtg-_E0-0Lk</string>
    <string name="myCart">My Cart</string>
    <string name="history">History</string>
    <string name="product">Product</string>
    <string name="alert">Alert</string>
    <string name="Okay">Ok</string>
    <string name="profile">Profile</string>
    <string name="creditcard">Credit Card</string>
    <string name="signin">Sign in</string>
    <string name="termandconditon">Agree to terms and \n conditions</string>
    <string name="exit">Exit</string>
    <string name="profile_">Profile</string>
    <string name="purchases">Purchases</string>
    <string name="shop">The Shop</string>
    <string name="auction">Auction</string>
    <string name="logon">Click on the button to log in</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="cardtype">Card Type</string>
    <string name="cardnumber">Card number</string>
    <string name="entercardnumber">Enter card number</string>
    <string name="cardholername">Card holder name</string>
    <string name="nameoncard">Name on Card</string>
    <string name="expirydate">Expiry Date</string>
    <string name="cvv">Cvv</string>
    <string name="mmyyyy">mm/yyyy</string>
    <string name="addpaymentmethod">Add Payment Method</string>
    <string name="addauction">Add Auction</string>
    <string name="startdate">Start date/time</string>
    <string name="enterStartdate">Enter Start date</string>
    <string name="starttime">Start time</string>
    <string name="enterStarttime">Enter Start time</string>
    <string name="enddate">End date/time</string>
    <string name="enterenddate">Enter End date</string>
    <string name="endtime">End time</string>
    <string name="enterendtime">Enter End time</string>
    <string name="quntity">Quantity</string>
    <string name="enterquntity">Enter Quantity</string>
    <string name="image">Image</string>
    <string name="browse">Browse..</string>
    <string name="reserveprice">Reserve price</string>
    <string name="enterreserveprice">Enter Reserve price</string>
    <string name="baseprice">Initial price</string>
    <string name="add">Add</string>
    <string name="winnerdetail">Winner Details</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="highestprice">Price</string>
    <string name="helo">Hello</string>
    <string name="staion">Station</string>
    <string name="auctiontitle">Auction title</string>
    <string name="auctiondesc">Auction Description</string>
    <string name="cas">Case</string>
    <string name="totalprice">Total Price</string>
    <string name="shopping">Shopping</string>
    <string name="purchase">Purchases</string>
    <string name="myauction">My Auction</string>
    <string name="release">Edit</string>
    <string name="typeurname">Please type your name</string>
    <string name="title">Title</string>
    <string name="addtocart">Add to cart</string>
    <string name="timeover">Time is over</string>
    <string name="auctionend">The auction has ended.</string>
    <string name="tryagain">We\'re sorry an error has occurred ! Please try again</string>
    <string name="noauction">There are no auctions right now</string>
    <string name="yes">Yes</string>
    <string name="noproduct">There are no products.</string>
    <string name="plzwait">Please wait a moment, your order is processed!</string>
    <string name="addedtocart">The product has been added to your shopping cart.</string>
    <string name="pleasewait">Please Wait..</string>
    <string name="orderprocced">Please wait a moment, your order is processed!</string>
    <string name="loading">Loading...</string>
    <string name="profileupdated">Profile updated</string>
    <string name="termconditon">Please accept the terms and conditions</string>
    <string name="signout">Are you sure you want to sign out?</string>
    <string name="no">No</string>
    <string name="name_on_card">Name on card</string>
    <string name="card_number">Card number</string>
    <string name="cancel">Cancel</string>
    <string name="save_card">Save Card</string>
    <string name="scan_card">Scan Card</string>
    <string name="save">Save</string>
    <string name="profileerror">Please complete your profile</string>
    <string name="detail">Detail</string>
    <string name="str_internet_check">Please check your internet connection.</string>
    <string name="str_address">Address</string>
    <string name="manage_quntity">Deliver</string>
    <string name="move_to_inventory">Move to storage</string>
    <string name="direct_deliver">Direct Deliver</string>
    <string name="select_one">Please select one from above.</string>
    <string name="inventory">Storage</string>
    <string name="inventory_detail">Storage Detail</string>
    <string name="product_detail">Product Details</string>
    <string name="enter_max_quntity">Enter Max Quantity</string>
    <string name="pay">Pay</string>
    <string name="payment">Payment</string>
    <string name="buy_now">Buy Now</string>
    <string name="categories">Categories</string>
    <string name="mycart">My Cart</string>
    <string name="xpress">Xpress</string>
    <string name="storage">Storage</string>
    <string name="store">Store</string>
    <string name="buy_dates">Buy dates Products</string>
    <string name="liveauction">Live Auction</string>
    <string name="wonauction">Won Auction</string>
    <string name="uploadfile">Choose file to Upload</string>
    <string name="home">Home</string>
    <string name="my_order">My Orders</string>
    <string name="setting">Setting</string>
    <string name="about_us">About Us</string>
    <string name="help">24x7 Help</string>
    <string name="log_out">Log Out</string>
    <string name="enterbasrprice">Enter Base Price</string>
    <string name="enterstation">Enter Station</string>
    <string name="entetitle">Enter Auction Title</string>
    <string name="enterdescription">Enter Auction Description</string>
    <string name="selectproduct">Select Product</string>
    <string name="personalinfo">PERSONAL INFORMATION</string>
    <string name="edit">Edit</string>
    <string name="minbid">Min bid increment (1-99)</string>
    <string name="maxbid">Max bid increment (1-99)</string>
    <string name="enterminbid">Enter Min Bid Increment</string>
    <string name="entermaxbid">Enter Max Bid Increment</string>
    <string name="extentedtime">Extended time (in sec)</string>
    <string name="enterextendtime">Enter Extend Time</string>
    <string name="numwinner">No. of winner</string>
    <string name="expiredate">Expire days</string>
    <string name="enterexpiry">Enter Expiry Date</string>
    <string name="enternumberwinner">Enter Number of Winner</string>
    <string name="entername">Enter Name</string>
    <string name="location">Location</string>
    <string name="enterlocation">Enter Location</string>
    <string name="mobile">Mobile No.</string>
    <string name="entermobile">Enter Mobile No</string>
    <string name="selectcountry">Select Country</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="paymentmethod">Payment Method</string>
    <string name="sort">Sort</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="enterfirstname">Enter First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enterlastname">Enter Last Name</string>
    <string name="phonenumber">Phone Number</string>
    <string name="enterphone">Enter Phone Number</string>
    <string name="email">Email</string>
    <string name="entermail">Enter E-mail Id</string>
    <string name="password">Password</string>
    <string name="enterpassword">Enter Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="enterconfirm">Enter Confirm Password</string>
    <string name="createaccount">Create An Account</string>
    <string name="checkout">Checkout</string>
    <string name="addnewaddress">Add new address</string>
    <string name="street">Street</string>
    <string name="selectcity">Select City</string>
    <string name="Postalcode">Postal Code</string>
    <string name="enterpostalcode">Enter postal code</string>
    <string name="company">Company</string>
    <string name="entercompany">Enter company name</string>
    <string name="saveaddress">Save Address</string>
    <string name="balance">Balance</string>
    <string name="sale">Sale</string>
    <string name="grand_total">Grand Total</string>
    <string name="set_as_default_address">Set as default address</string>
    <string name="search">Search</string>
    <string name="deliver_to">Deliver to</string>
    <string name="change">Change</string>
    <string name="mobiles">Mobile :</string>
    <string name="proceed_to_pay">Proceed to pay</string>
    <string name="checkout_ui_callback_scheme">checkoutui</string>
    <string name="payment_button_callback_scheme">paymentbutton</string>
    <string name="custom_ui_callback_scheme">customui</string>
    <string name="checkout_ui_title">Ready-to-Use UI</string>
    <string name="payment_button_title">Payment Button</string>
    <string name="custom_ui_title">SDK &amp; Your Own UI</string>
    <string name="checkout_immediately_with">Checkout immediately with</string>
    <string name="sdk_version_number">mobile sdk v%s</string>
    <string name="visa">VISA</string>
    <string name="card_holder_hint">Card Holder</string>
    <string name="card_number_hint">Card Number</string>
    <string name="card_expiry_month_hint">MM</string>
    <string name="card_expiry_year_hint">YY</string>
    <string name="card_cvv_hint">CVV</string>
    <string name="date_delimiter">/</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_proceed_to_checkout">PROCEED TO CHECKOUT</string>
    <string name="button_pay_now">Pay Now</string>
    <string name="message_successful_payment">The payment was successful</string>
    <string name="message_unsuccessful_payment">"The payment was unsuccessful"</string>
    <string name="message_payment_confirmation">Payment of %1$s %2$s will be executed</string>
    <string name="progress_message_please_wait">Please wait…</string>
    <string name="progress_message_checkout_id">Getting the checkout id…</string>
    <string name="progress_message_checkout_info">Getting the checkout info…</string>
    <string name="progress_message_payment_status">Getting the payment status…</string>
    <string name="progress_message_processing_payment">Processing payment…</string>
    <string name="error_message">An error occurred</string>
    <string name="error_empty_fields">The fields must not be empty</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="subtotal">Subtotal</string>
    <string name="shippingcharge">Shipping Charge</string>
    <string name="payment_modes">Paymnet modes</string>
    <string name="state">State</string>
    <string name="enterstate">Enter State</string>
    <string name="id">ID</string>
    <string name="enterid">Enter Unique Id</string>
    <string name="select_a_country">Select a country..</string>
    <string name="changeaddress">Change Address</string>
    <string name="newoffers">New Offers</string>
    <string name="remove">Remove</string>
    <string name="movetobag">Move to Bag</string>
    <string name="total_amount_to_be_paid">Total amount to be paid</string>
</resources>