<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentInsetEnd="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetRight="0dp"
            android:contentInsetStart="0dp"
            android:gravity="center_horizontal"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize">

                <ImageView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="4dp"
                    android:padding="8dp"
                    android:src="@drawable/ic_icon_back_arrow" />

                <TextView
                    style="@style/TextAppearance.AppCompat.Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/proxima_nova_semibold_webfont"
                    android:gravity="center"
                    android:text="@string/addauction"
                    android:textStyle="bold" />
            </RelativeLayout>

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proxima_nova_alt_regular_webfont"
                android:textColor="@color/grey_light"
                android:text="@string/startdate" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:fontFamily="@font/proxima_nova_alt_regular_webfont"
                android:hint="@string/enterStartdate"
                android:textColor="@color/black_light"
                android:textColorHint="@color/black_light" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="5dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_light"
                android:fontFamily="@font/proxima_nova_alt_regular_webfont"
                android:text="@string/starttime" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:fontFamily="@font/proxima_nova_alt_regular_webfont"
                android:hint="@string/enterStarttime"
                android:textColor="@color/black_light"
                android:textColorHint="@color/black_light" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="5dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/grey_light"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proxima_nova_alt_regular_webfont"
                android:text="@string/enddate" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:fontFamily="@font/proxima_nova_alt_regular_webfont"
                android:hint="@string/enterStarttime"
                android:text="@string/enterenddate"
                android:textColor="@color/black_light"
                android:textColorHint="@color/black_light" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="5dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_light"
                android:fontFamily="@font/proxima_nova_alt_regular_webfont"
                android:text="@string/endtime" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:fontFamily="@font/proxima_nova_alt_regular_webfont"
                android:hint="@string/enterendtime"
                android:textColor="@color/black_light"
                android:textColorHint="@color/black_light" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="5dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_light"
                android:fontFamily="@font/proxima_nova_alt_regular_webfont"
                android:text="@string/quntity" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:fontFamily="@font/proxima_nova_alt_regular_webfont"
                android:hint="@string/enterquntity"
                android:textColor="@color/black_light"
                android:textColorHint="@color/black_light" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="5dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_light"
                android:fontFamily="@font/proxima_nova_alt_regular_webfont"
                android:text="@string/image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:layout_width="0dp"
                    android:layout_weight=".8"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:fontFamily="@font/proxima_nova_alt_regular_webfont"
                    android:hint="@string/uploadfile"
                    android:textColor="@color/black_light"
                    android:textColorHint="@color/black_light" />

                
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_icon_back_upload"/>

            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="bottom"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_light"
                android:fontFamily="@font/proxima_nova_alt_regular_webfont"
                android:text="@string/reserveprice" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:fontFamily="@font/proxima_nova_alt_regular_webfont"
                android:hint="@string/enterreserveprice"
                android:textColor="@color/black_light"
                android:textColorHint="@color/black_light"/>


        </LinearLayout>
    </LinearLayout>

</LinearLayout>
