<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_below="@+id/llTop"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_cart"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/shopping"
            android:textSize="16sp"
            android:background="@drawable/btn_active"
            android:fontFamily="@font/proxima_nova_alt_regular_webfont"
            android:textColor="@color/light_yellow" />

        <TextView
            android:id="@+id/text_history"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/purchase"
            android:textSize="16sp"
            android:fontFamily="@font/proxima_nova_alt_regular_webfont"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/all_auction"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/myauction"
            android:textSize="16sp"
            android:fontFamily="@font/proxima_nova_alt_regular_webfont"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tv_inventory"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/inventory"
            android:textSize="16sp"
            android:fontFamily="@font/proxima_nova_alt_regular_webfont"
            android:textColor="@android:color/black" />
    </LinearLayout>


    <include
        android:id="@+id/historylayout"
        layout="@layout/history_fragment"
        android:visibility="visible" />


</LinearLayout>
